# musl-bindep-feature-bug

./: Cargo.toml  rust-toolchain.toml
crates/a/: Cargo.toml
crates/a/src/: lib.rs
crates/b/: Cargo.toml
crates/b/src/: lib.rs
crates/c/: Cargo.toml
crates/c/src/: lib.rs
crates/d/: Cargo.toml
crates/dep/: Cargo.toml
