[package]
name = "musl-bindep-feature-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { workspace = true }

# This causes build failure with `cargo build --target x86_64-unknown-linux-musl`:
dep = { version = "0.1.0", path = "crates/dep", artifact = "bin", target = "x86_64-unknown-linux-musl" }
# This would cause a build failure with `cargo build --target wasm32-wasi`
#dep = { version = "0.1.0", path = "crates/dep", artifact = "bin", target = "wasm32-wasi" }
# This would fix the error:
#dep = { version = "0.1.0", path = "crates/dep" }

[workspace.dependencies]
rsa = { version = "0.7.2", default-features = false }
# This would fix the error:
#rsa = { version = "0.7.2" }
