[package]
name = "musl-bindep-feature-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
a = { workspace = true }

# This causes build failure with `cargo build --target x86_64-unknown-linux-musl`:
dep = { version = "0.1.0", path = "crates/dep", artifact = "bin", target = "x86_64-unknown-linux-musl" }
# This would cause a build failure with `cargo build --target wasm32-wasi`
#dep = { version = "0.1.0", path = "crates/dep", artifact = "bin", target = "wasm32-wasi" }
# This would fix the error:
#dep = { version = "0.1.0", path = "crates/dep" }

[workspace.dependencies]
a = { version = "0.1.0", path = "crates/a", default-features = false }
b = { version = "0.1.0", path = "crates/b", default-features = false }
c = { version = "0.1.0", path = "crates/c", default-features = false }
d = { version = "0.1.0", path = "crates/d", default-features = false }
